--- a/index.ipynb
+++ b/index.ipynb
@@ -125,19 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_individual, neighbor):\n",
-    "    neighbor_with_distance = neighbor.copy()\n",
+    "    neighbor_with_distance = neighbor\n",
     "    neighbor_with_distance['distance'] = distance(selected_individual, neighbor)\n",
     "    return neighbor_with_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "{'name': 'Suzie', 'x': 1, 'y': 11, 'distance': 4.242640687119285}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
