--- a/index.ipynb
+++ b/index.ipynb
@@ -184,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def distance_all(selected_individual, neighbors):\n",
+    "def distance_all(selected_individual, neighbors\n",
+    "        ):\n",
     "    remaining_neighbors = filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), remaining_neighbors))"
    ]
